--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Copyright © 2016 iVladSkipper. All rights reserved.
 This is Twitter Streaming client that showing the London tweets.
 
 It is running continuously, you just need open it and scrolling down to look all last tweets.
+
+How it's work (Video Demo) - https://www.youtube.com/watch?v=22dmzjnkRNc
