Changes in README file

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ This is Twitter Streaming client that showing the London tweets.
 
 It is running continuously, you just need open it and scrolling down to look all last tweets.
 
-How it's work (Video Demo) - https://www.youtube.com/watch?v=22dmzjnkRNc
+How it's work (Video Demo) - https://www.youtube.com/watch?v=76NJMBy4Ab0
